--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 				<li>
 					<a href="#">Game</a>
 				</li>
+				<li>
+					<a href="asset/login.html">Login</a>
+					<i class="nav-icon fas fa-sign-out-alt"></i>
+				</li>
 			</ul>
 		</nav>
 		<!-- akhir bagian menu -->
@@ -75,6 +79,6 @@ Dota 2 dimainkan oleh 2 tim yang beranggota 5 orang pemain, setiap tim memiliki 
 		</div>
 		<!-- akhir bagian konten Blog -->
 	</div>
-
+ 
 </body>
 </html>
