--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 					<a href="asset/login.html">Login</a>
 					<i class="nav-icon fas fa-sign-out-alt"></i>
 				</li>
+				<li>
+					<a href="fibbonaci.php">Fibonaci</a>
+				</li>
+				<li>
+					<a href="aritmatika.php">Aritmatika</a>
+				</li>
 			</ul>
 		</nav>
 		<!-- akhir bagian menu -->
